--- a/views/common/login.ejs
+++ b/views/common/login.ejs
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+
+
 </head>
 <body>
     <div class="background"></div>
     <div class="login-container">
     <h2 class="login-title">Admin Access</h2>
-    <form action="/auth/login" method="post">
+    <form action="" method="post">
         <div class="form-group">
         <label for="email">Email</label><br>
-        <input type="email" name="mail" required ><br>
+        <input type="email" id="emailInput" name="mail" placeholder="Type your email here" required ><br>
         </div>
         <div class="form-group">
         <label for="pass">Password</label><br>
-        <input type="password" name="password" required ><br>
+        <input type="password" id="passwordInput" name="password" placeholder="password" required ><br>
         </div>
-        <input class="login-button" type="submit" name="submit">
+        <input class="login-button" id="submit" type="submit" name="submit">
+        <input type="hidden" id="error" style="color: rgb(142 0 0); width: 100%; background: none; border: none; text-align: center; padding-top: 10PX;font-size: 17PX">
     </form>
     </div>
 
@@ -147,5 +150,8 @@
             }
         }
     </style>
+
+<script src="/common/js/login.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 </body>
 </html>
