--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
+    <link rel="stylesheet" href="/styles/tailwind.css">
+
 </head>
-<body style="background-image: url('');">
-    <section >
-        <button class="btn-home">Get The Grammer   ></button>
+
+<body class="bg-black">
+    <section>
+        
     </section>
+    <div class="flex items-center justify-center min-h-screen max-w-screen-xl mx-auto">
+        <!-- Grid -->
+        <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-6">
+            <!-- Card -->
+            <% details.forEach((detail) => { %>
+                <div class="bg-neutral-200 rounded-lg shadow-md overflow-hidden w-full md:w-80 lg:w-96">
+                    <div class="p-5 flex flex-col">
+                        <h2 class="text-2xl md:text-3xl font-medium mt-3 text-center"><%= detail.word %></h2>
+                        <p class="text-slate-500 text-lg mt-3 text-center"><%= detail.sentence %></p>
+                        <a href="/detailPage/<%= detail._id %>" 
+                           class="bg-blue-500 text-white text-center py-2 px-4 rounded-lg font-semibold mt-4 
+                           hover:bg-blue-600 focus:bg-blue-700 focus:outline-none transition-all duration-200 ease-out">
+                           View details
+                        </a>
+                    </div>
+                </div>
+            <% }) %>
+        </div>
+    </div>
     
+</body>
+
+</html>
+
+
+<!-- <% details.forEach(function(detail){ %>
+        <h1><%= detail.word %></h1>
+        <h2><%= detail.sentence %></h2>
+        <h1><%= detail.grammer %></h1>
+        <a href="/detailPage/<%= detail._id %>">New </a>
+
+        <% }) %> 
     <style> 
     section{
         display: flex;
@@ -19,6 +54,4 @@
         height: 40px;
         border-radius: 10px;
     }
-    </style>
-</body>
-</html>
+    </style> -->
