--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -11,11 +11,12 @@
 
 <body class="bg-black">
     <section>
-        
+        <img class="w-full h-full object-cover rounded-lg" src="https://i.ibb.co/NNYskZ4/awamil-background-image.jpg" alt="">
     </section>
     <div class="flex items-center justify-center min-h-screen max-w-screen-xl mx-auto">
         <!-- Grid -->
         <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-6">
+            <!-- Banner -->
             <!-- Card -->
             <% details.forEach((detail) => { %>
                 <div class="bg-neutral-200 rounded-lg shadow-md overflow-hidden w-full md:w-80 lg:w-96">
